[fix] fix multiply computation accuracy